# damast-ais-showcase

./: CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml  setup.py  start_local.sh  web_application.py  worker-socket-predict.py
.github/workflows/: test.yml
scripts/: damast-ais-showcase-start
src/damast_ais_showcase/: figures.py  main.py  web_application.py
src/damast_ais_showcase/tabs/: explore.py  predict.py
