[build-system]
requires = ["setuptools >= 61.0.0",
    "wheel",
    "build",
    "sphinx"]

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "damast-ais-showcase"
version = "0.1.1"
description = "Package to showcase 'damast' for AIS data"
readme = "README.md"
keywords = ["data processing", "pipeline", "machine learning"]
authors = [
    { name = "Thomas Roehr", email = "roehr@simula.no" },
    { name = "Jørgen S. Dokken", email = "dokken@simula.no" }
]
requires-python = ">=3.10"

maintainers = [
    { name = "Thomas Roehr", email = "roehr@simula.no" },
    { name = "Jørgen S. Dokken", email = "dokken@simula.no" }
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Lanugage :: Python :: 3.10",
]

dependencies = [
    "numpy",
    "damast",
    "dash[diskcache]>=2.10",
    "dash-extensions<2",
    "dash-mantine-components",
    "dash-daq",
    "dash-uploader>=0.7.0a1",
]
[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://github.com/simula/damast-ais-showcase"
documentation = "https://github.com/simula/damast-ais-showcase"
repository = "https://github.com/simula/damast-ais-showcase"

[project.optional-dependencies]
dev = [
    "tox",
    "flake8-gl-codeclimate",
    "jupyter-book",
    "isort",
    "sphinx-autoapi"
]
test = [
    "pytest",
    "coverage",
    "pytest-cov"
]

[project.scripts]
damast-ais-showcase = "damast_ais_showcase.main:run"
damast-ais-showcase-worker = "damast_ais_showcase.main:run_worker"

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0103", # (invalid-name)
    #    "C0114", # (missing-module-docstring)
    #    "C0115", # (missing-class-docstring)
    #    "C0116", # (missing-function-docstring)
    #    "R0903", # (too-few-public-methods)
    #    "R0913", # (too-many-arguments)
    #    "W0105", # (pointless-string-statement)
]

[tool.isort]
multi_line_output = 8
